# ugv_ws

./: .gitignore  README.md  frames_2025-12-30_15.56.58.gv  my_map.pgm  my_map.yaml
docs/: imu_sensor_fusion.md  odom_alignment.md  rviz_sync.md
install/: setup.sh
install/rosmaster_bringup/share/rosmaster_bringup/config/: slam_toolbox.yaml
install/rosmaster_bringup/share/rosmaster_bringup/launch/: ugv_slam.launch.py
install/yahboomcar_ctrl/lib/yahboomcar_ctrl/: yahboom_joy_R2  yahboom_joy_X3  yahboom_keyboard
install/yahboomcar_ctrl/share/yahboomcar_ctrl/: package.dsv  package.ps1  package.sh  package.xml
install/yahboomcar_ctrl/share/yahboomcar_ctrl/launch/: yahboomcar_joy_launch.py
log/: latest_build
rosmaster_ctrl/: setup.py
src/rosmaster_base_package/rosmaster_base_package/: rosmaster_base_node.py
src/rosmaster_bringup/: package.xml  setup.py
src/rosmaster_bringup/config/: ekf_localization.yaml  nav2_params.yaml  slam_toolbox.yaml
src/rosmaster_bringup/launch/: ugv_bringup.launch.py  ugv_slam.launch.py
src/rosmaster_bringup/rosmaster_bringup/: scan_front_filter_node.py
src/rosmaster_description/urdf/: ugv.urdf.xacro
