<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosmaster_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for Rosmaster UGV</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- 이 패키지는 ament_python 빌드 타입 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런치 관련 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 로봇 드라이버 / description -->
  <exec_depend>rosmaster_base_package</exec_depend>
  <exec_depend>rosmaster_description</exec_depend>

  <!-- 상태 퍼블리셔 -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- 카메라 드라이버 -->
  <exec_depend>v4l2_camera</exec_depend>
  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
